--- a/Advanta/style.css
+++ b/Advanta/style.css
@@ -697,6 +697,11 @@ main select {
   grid-template-columns: 50px 1fr 100px;
 }
 
+#observation-parameters .table .tr {
+  display: grid;
+  grid-template-columns: 50px 2fr 1fr 1fr 1fr 100px;
+}
+
 /* ===== LIBRARY ===== */
 
 #library .table .tr {
