--- a/Advanta/style.css
+++ b/Advanta/style.css
@@ -626,70 +626,6 @@ main select {
   grid-template-columns: 50px 1fr 1fr 130px 130px 90px 130px 90px 170px 100px;
 }
 
-.popup form {
-  display: grid;
-  gap: 1rem;
-}
-
-.popup form div:not(.actions) {
-  display: grid;
-  grid-template-columns: 100px 1fr;
-  gap: 1.5rem;
-}
-
-.popup form label {
-  display: flex;
-  align-items: center;
-}
-
-.popup form input, .popup form select {
-  background: var(--body);
-  border: none;
-  outline: none;
-  padding: .75rem 1rem;
-  border-radius: .5rem;
-  box-shadow: var(--box-shadow);
-}
-
-.popup form select {
-  border-right: .5rem solid var(--body);
-  cursor: pointer;
-}
-
-.popup form .actions {
-  display: grid;
-  gap: 1rem;
-  margin-top: 1rem;
-}
-
-.popup.edit form .actions {
-  grid-template-columns: 1fr 1fr;
-}
-
-/* ===== POPUP ===== */
-
-.popup form button {
-  background: var(--green);
-  color: white;
-  width: 100%;
-  border: none;
-  outline: none;
-  padding: 1rem;
-  border-radius: .5rem;
-  cursor: pointer;
-  transition: .2s all;
-  font-weight: bold;
-  font-size: 1rem;
-}
-
-.popup form button#cancelBtn {
-  background: var(--red);
-}
-
-.popup form button:hover {
-  filter: brightness(.8);
-}
-
 /* ===== CROPS & OBSERVATION PARAMETERS ===== */
 
 .single-inventory .table .tr {
@@ -700,6 +636,41 @@ main select {
 #observation-parameters .table .tr {
   display: grid;
   grid-template-columns: 50px 2fr 1fr 1fr 1fr 100px;
+}
+
+#paramTypeTable {
+  display: block;
+  margin-left: calc(100px + 1.5rem)
+}
+
+#paramTypeTable > .type {
+  max-height: 0;
+  transition: .2s all;
+  overflow: hidden;
+}
+
+#paramTypeTable > .type.active {
+  max-height: 200px;
+}
+
+#paramTypeTable .table .tbody .tr {
+  display: grid;
+}
+
+#paramTypeTable [data-value="range"] .table .tbody .tr {
+  grid-template-columns: 50px 1fr;
+}
+
+#paramTypeTable [data-value="range"] .table .tbody .tr .td:first-child {
+  border-right: 1px solid #ededef;
+}
+
+.popup.params input[type="checkbox"] {
+  width: 20px;
+  height: 20px;
+  float: left;
+  margin-right: .7rem;
+  cursor: pointer;
 }
 
 /* ===== LIBRARY ===== */
@@ -919,6 +890,7 @@ button#uploadBtn:hover {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   max-height: calc(100% - 2rem);
   overflow-y: auto;
+  z-index: 1;
 }
 
 .popup .head {
@@ -948,4 +920,82 @@ button#uploadBtn:hover {
 
 .popup .head .close:hover svg {
   stroke: var(--prim)
+}
+
+.popup form {
+  display: grid;
+  gap: 1rem;
+}
+
+.popup form > div:not(.actions) {
+  display: grid;
+  grid-template-columns: 100px 1fr;
+  gap: 1.5rem;
+}
+
+.popup form label {
+  display: flex;
+  align-items: center;
+}
+
+.popup form input, .popup form select {
+  background: var(--body);
+  border: none;
+  outline: none;
+  padding: .75rem 1rem;
+  border-radius: .5rem;
+  box-shadow: var(--box-shadow);
+}
+
+.popup form select {
+  border-right: .5rem solid var(--body);
+  cursor: pointer;
+}
+
+.popup form .actions {
+  display: grid;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.popup.edit form .actions {
+  grid-template-columns: 1fr 1fr;
+}
+
+.popup form button {
+  background: var(--green);
+  color: white;
+  width: 100%;
+  border: none;
+  outline: none;
+  padding: 1rem;
+  border-radius: .5rem;
+  cursor: pointer;
+  transition: .2s all;
+  font-weight: bold;
+  font-size: 1rem;
+}
+
+.popup form button#cancelBtn {
+  background: var(--red);
+}
+
+.popup form button:hover {
+  filter: brightness(.8);
+}
+
+.pop-child form {
+  background: white;
+  padding: 1.5rem;
+  border-radius: 0 8px 8px 0;
+  transition: .2s all;
+  width: 250px;
+  margin-left: -250px;
+  position: absolute;
+  transform: translateY(-50%);
+  top: 50%;
+}
+
+.pop-child form.active {
+  margin-left: 0;
 }
