--- a/Advanta/style.css
+++ b/Advanta/style.css
@@ -221,6 +221,7 @@ body {
 
 .table .action button#delete {
   background: #ff414b3a;
+  padding: 0;
 }
 
 .table .action button#delete svg {
@@ -233,6 +234,7 @@ body {
 
 .table .action button#edit {
   background: #5555d74f;
+  padding: 0;
 }
 
 .table .action button#edit svg {
@@ -646,7 +648,7 @@ main select {
 #paramTypeTable > .type {
   max-height: 0;
   transition: .2s all;
-  overflow: hidden;
+  overflow: auto;
 }
 
 #paramTypeTable > .type.active {
@@ -658,7 +660,7 @@ main select {
 }
 
 #paramTypeTable [data-value="range"] .table .tbody .tr {
-  grid-template-columns: 50px 1fr;
+  grid-template-columns: 50px 1fr 75px;
 }
 
 #paramTypeTable [data-value="range"] .table .tbody .tr .td:first-child {
@@ -885,7 +887,7 @@ button#uploadBtn:hover {
   background: white;
   border-radius: 8px;
   padding: 1.75rem 2rem;
-  max-width: 500px;
+  max-width: 600px;
   width: 100%;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   max-height: calc(100% - 2rem);
