--- a/Agroinotek/all.css
+++ b/Agroinotek/all.css
@@ -26,6 +26,14 @@ body {
   width: 100% !important;
 }
 
+* {
+  box-sizing: border-box !important;
+}
+
+* {
+  word-break: break-word;
+}
+
 /* ===== HEADER AND NAV ===== */
 
 .pkp_structure_head,
